--- a/src/sass/_searchResults.scss
+++ b/src/sass/_searchResults.scss
@@ -13,6 +13,10 @@
   margin-top: auto;
   padding: 0 3.5rem;
 
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-end;
+
   &::after {
     content: '';
     display: table;
